<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Checkers</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="iavsia">IA vs IA</string>
    <string name="menvsia">Man vs IA</string>
    <string name="menvsman">Man vs Man</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_checkerboard">CheckerboardActivity</string>
    <string name="copyright">\u00A9 Copyright 2013</string>
    <string name="player_ia_1">IA Player 1</string>
    <string name="player_ia_2">IA Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player">IA Player</string>
    <string name="player_man">Man Player</string>
    <string name="Yes">OK</string>
    <string name="No">NO</string>
    <string name="winner">Vince</string>
    <string name="par">Pari!</string>  
    <string name="surrender">si arrende!</string>  
    <string name="depth">Profondità:</string>
    <string name="options">Opzioni</string>
    <string name="strategy1">F. euristica P1:</string>
    <string name="strategy2">F. euristica P2:</string>
    <string name="simplestrategy">Simple Strategy</string>
    <string name="avaragestrategy">Average Strategy</string>
    <string name="delay">Ritardo mossa:</string>
    <string name="m1000">1000</string>

</resources>