<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".CheckersActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_app"
                style="@style/TextShadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/my_gray"
                android:textSize="95sp" />

            <Button
                android:id="@+id/button_iavsia"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/game_button"
                android:onClick="startCheckerBoard"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/iavsia"
                android:textColor="#ffffff"
                android:textSize="45sp" />

            <Button
                android:id="@+id/button_manvsia"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/game_button"
                android:onClick="startCheckerBoard"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/menvsia"
                android:textColor="#ffffff"
                android:textSize="45sp" />

            <Button
                android:id="@+id/button_manvsman"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/game_button"
                android:onClick="startCheckerBoard"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/menvsman"
                android:textColor="#ffffff"
                android:textSize="45sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:background="@drawable/game_button"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/options"
                    style="@style/TextShadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/options"
                    android:textColor="#ffffff"
                    android:textSize="45sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="0dp" >

                    <TextView
                        android:id="@+id/depth"
                        style="@style/TextShadow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/depth"
                        android:textColor="#ffffff"
                        android:textSize="35sp" />

                    <Spinner
                        android:id="@+id/depth_value"
                        style="@style/TextShadow"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/game_button"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="35sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="0dp" >

                    <TextView
                        android:id="@+id/strategy"
                        style="@style/TextShadow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/strategy"
                        android:textColor="#ffffff"
                        android:textSize="35sp" />

                    <Spinner
                        android:id="@+id/strategy_value"
                        style="@style/TextShadow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/game_button"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="35sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:paddingBottom="0dp"
            android:text="@string/copyright"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>